--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@capacitor/core": "^7.4.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "firebase": "^10.8.0",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
